platform/hello.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
  namespace: online-shop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
      - name: hello
        image: hashicorp/http-echo:0.2.3
        args:
        - "-text=HELLO FROM INGRESS"
        ports:
        - containerPort: 5678
---
apiVersion: v1
kind: Service
metadata:
  name: hello
  namespace: online-shop
spec:
  selector:
    app: hello
  ports:
  - name: http
    port: 80
    targetPort: 5678
